--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+body {
+    height: 100vh;
+    background: url("//longwallpapers.com/Desktop-Wallpaper/sky-wallpaper-1080p-For-Desktop-Wallpaper.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Lato', sans-serif;
+}
+
 #main_content {
     display: flex;
     justify-content: space-around;
@@ -9,16 +17,18 @@ h1 {
 
 ul {
     list-style-type: none;
-    padding: 2%;
+    padding: 1%;
     text-align: center;
 }
 
 #list {
-    margin: 2% auto;
+    margin: 1% auto;
     box-shadow: 0 0 15px 0 #333;
     padding: 2%;
     min-width: 33%;
     max-width: 33%;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, .6);
 }
 
 #list h1 {
